--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "axios": "^0.20.0",
+    "axios-concurrency": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
